Endpioint reordering & Dev Controller (#132)
- Reorder endpoints to the new standard
- Add the dev controller into the swagger docs when generated from the
build command
