# services/content-publishing/apps/api/src/development.controller.ts
@@ -11,9 +11,10 @@ import * as QueueConstants from '../../../libs/common/src';
 import { IpfsService } from '../../../libs/common/src/utils/ipfs.client';
 import { AnnouncementType, createBroadcast, createProfile, createReaction, createReply, createTombstone, createUpdate } from '../../../libs/common/src/interfaces/dsnp';
 import { calculateDsnpHash } from '../../../libs/common/src/utils/ipfs';
-import { ApiOperation } from '@nestjs/swagger';
+import { ApiOperation, ApiTags } from '@nestjs/swagger';
 
 @Controller('dev')
+@ApiTags('dev')
 export class DevelopmentController {
   private readonly logger: Logger;
 
@@ -41,7 +42,7 @@ export class DevelopmentController {
   }
 
   @Get('/request/:jobId')
-  @ApiOperation({ summary: 'Get a Job given a jobId' })
+  @ApiOperation({ summary: 'Get a Job given a jobId', description: 'ONLY enabled when ENVIRONMENT="dev".' })
   async requestJob(@Param('jobId') jobId: string) {
     this.logger.log(jobId);
     const job = await this.requestQueue.getJob(jobId);
@@ -50,7 +51,7 @@ export class DevelopmentController {
   }
 
   @Get('/asset/:assetId')
-  @ApiOperation({ summary: 'Get an Asset given an assetId' })
+  @ApiOperation({ summary: 'Get an Asset given an assetId', description: 'ONLY enabled when ENVIRONMENT="dev".' })
   // eslint-disable-next-line consistent-return
   async getAsset(@Param('assetId') assetId: string) {
     if (await this.ipfsService.isPinned(assetId)) {
@@ -60,7 +61,7 @@ export class DevelopmentController {
   }
 
   @Post('/dummy/announcement/:queueType/:count')
-  @ApiOperation({ summary: 'Create dummy announcement data' })
+  @ApiOperation({ summary: 'Create dummy announcement data', description: 'ONLY enabled when ENVIRONMENT="dev".' })
   async populate(@Param('queueType') queueType: QueueConstants.AnnouncementTypeDto, @Param('count') count: number) {
     const promises: Promise<Job>[] = [];
     // eslint-disable-next-line no-plusplus
